// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders center 1`] = `
.c0 {
  display: grid;
  place-items: center;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`renders column 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    class="c0 c1"
  />
</div>
`;

exports[`renders flex container 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`renders row 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div>
  <div
    class="c0 c1"
  />
</div>
`;

exports[`renders viewport which fills the screen 1`] = `
.c0 {
  width: 100vw;
  height: 100vh;
}

<div>
  <div
    class="c0"
  />
</div>
`;
